@startuml
'https://plantuml.com/class-diagram

interface TreeInterface<V>{
    + V value()
    + TreeInterface<V> leftChild()
    + TreeInterface<V> rightChild()
}

interface TreeValidationStrategy{
    + Response validate(TreeInterface<V> tree)
}

class DefaultTreeValidationStrategy{
    + Response validate(TreeInterface<V> tree)
}


interface Response{
    + Boolean isSuccessful()
}

TreeValidationStrategy <|.. DefaultTreeValidationStrategy

TreeInterface <.. TreeValidationStrategy
Response <.. TreeValidationStrategy

@enduml